fixed color of background

--- a/custom.css
+++ b/custom.css
@@ -1,8 +1,8 @@
 /*CUSTOM GLOBAL STYLE*/
 
 body {
-  background-color: #000;
-  color: #fff;
+  background-color: #000; !important
+  color: #fff; !important
 }
 
 a:link {
