updated link colors

--- a/custom.css
+++ b/custom.css
@@ -7,13 +7,13 @@ body {
 }
 
 a:link {
-  color: #DBCBD3;
+  color: #ABBAB3;
 }
 
 a:visited {
-  color: #B493A3;
+  color: #849A90;
 }
 
 a:hover {
-  color: #F7F3F5;
+  color: #E9EDEB;
 }
