--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2183,6 +2183,20 @@ input, select, textarea {
 					padding-top: 0;
 				}
 
+		ul.alt2 {
+			list-style: none;
+			padding-left: 0;
+		}
+
+			ul.alt2 li {
+                padding: 0.5em 0;
+			}
+
+				ul.alt2 li:first-child {
+					border-top: 0;
+					padding-top: 0;
+				}
+
 	dl {
 		margin: 0 0 2em 0;
 	}
